--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,76 +1,72 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #121212;
-    display: flex;
-    flex-direction: column;
-    margin: 0px;
+  background-color: #121212;
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
 }
 
 .material-icons.md-18 {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .material-icons.md-24 {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .material-icons.md-36 {
-    font-size: 36px;
+  font-size: 36px;
 }
 
 .material-icons.md-48 {
-    font-size: 48px;
+  font-size: 48px;
 }
-
 
 nav {
-    background-color: #121212;
-    display: flex;
-    margin: auto;
-    width: 90%;
-    margin-bottom: 10px;
-    border: 1px solid #5a696e;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+  background-color: #121212;
+  display: flex;
+  margin: auto;
+  width: 90%;
+  margin-bottom: 10px;
+  border: 1px solid #5a696e;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-
-nav>.nav-section {
-    padding: 3rem 2rem;
-    display: flex;
-    gap: 1rem;
+nav > .nav-section {
+  padding: 3rem 2rem;
+  display: flex;
+  gap: 1rem;
 }
 
 #nav-left-section {
-    flex-basis: 50%;
-    align-items: left;
-    justify-content: left;
+  flex-basis: 50%;
+  align-items: left;
+  justify-content: left;
 }
 
 #nav-right-section {
-    flex-basis: 50%;
-    align-items: right;
-    justify-content: right;
+  flex-basis: 50%;
+  align-items: right;
+  justify-content: right;
 }
 
-
 #nav-section-text {
-    display: flex;
-    font-size: 24px;
-    align-items: center;
+  display: flex;
+  font-size: 24px;
+  align-items: center;
 }
 
 #nav-section-text:hover {
-    opacity: 70%;
+  opacity: 70%;
 }
 
-.nav-left-section-products{
-    font-weight: 600;
+.nav-left-section-products {
+  font-weight: 600;
 }
-
 
 h1,
 h2,
@@ -78,80 +74,115 @@ h3,
 a,
 p,
 span {
-    font-family: "Rubik", sans-serif;
-    font-weight: 400;
-    color: white;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  color: white;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .nav-left-section-webshop {
-    font-size: 36px !important;
+  font-size: 36px !important;
 }
 
 main {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
-main>article {
-    width: 90%;
-    height: 100%;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    margin: auto;
+main > article {
+  width: 90%;
+  height: 100%;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  margin: auto;
 }
 
-main>article>.card {
-    height: 100%;
+main > article > .card {
+  height: 100%;
 }
 
 #card {
-    border-radius: 25px;
-    border: 1px solid #5a696e;
+  display: grid;
+  grid-template-rows: 400px 60px 100px;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  border-radius: 25px;
+  border: 1px solid #5a696e;
 }
 
 #card-img {
-    display: flex;
-    margin: auto;
+  display: flex;
+  margin: auto;
 
-    height: calc(65%);
-    width: calc(100%);
+  height: calc(100%);
+  width: calc(100%);
+  object-fit: fill;
 }
 
+.card-title {
+  max-width: 300px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 24px;
+  text-align: center;
+}
 
-.card-text {
-    margin-top: 30px;
-    margin-bottom: 0px;
-    font-size: 20px;
-    text-align: center;
+.card-desc {
+  max-width: 300px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 16px;
+  text-align: center;
 }
 
 .card-item-add {
-    display: flex;
-    margin-top: 40px;
-    align-items: center;
-    justify-content: center;
-
+  display: flex;
+  margin-bottom: 0px;
+  align-items: center;
+  justify-content: center;
 }
 
 #item-add-icon {
-    opacity: 60%;
+  opacity: 60%;
 }
 
 #item-add-icon:hover {
-    cursor: pointer;
-    opacity: 100%;
+  cursor: pointer;
+  opacity: 100%;
 }
 
 .itemAdd {
-    transform: scale(1.3);
-    transition: all 0.2s ease-out;
+  transform: scale(1.3);
+  transition: all 0.2s ease-out;
 }
 
 .itemAdded {
-    transform: scale(1);
-    transition: all 0.2s ease-out;
+  transform: scale(1);
+  transition: all 0.2s ease-out;
+}
+
+
+.showMore{
+  opacity: 60%;
+  font-size: 16px;
+  border-radius: 15px;
+  width: 70px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  background-color: white;
+}
+
+
+.showMore:hover{
+  opacity: 100%;
 }
