--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,7 @@ nav {
   margin: auto;
   width: 90%;
   margin-bottom: 10px;
-  border: 1px solid #5a696e;
+  border: 1px solid white;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -64,16 +64,12 @@ nav > .nav-section {
   opacity: 70%;
 }
 
-.nav-left-section-products {
-  font-weight: 600;
-}
-
 h1,
 h2,
 h3,
 a,
 p,
-span {
+span{
   font-family: "Rubik", sans-serif;
   font-weight: 400;
   color: white;
@@ -110,7 +106,7 @@ main > article > .card {
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   border-radius: 25px;
-  border: 1px solid #5a696e;
+  border: 1px solid white;
 }
 
 #card-img {
@@ -138,9 +134,18 @@ main > article > .card {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.card-price {
+  max-width: 300px;
   margin-top: 0px;
   margin-bottom: 0px;
   font-size: 16px;
+  font-size: 26px;
   text-align: center;
 }
 
@@ -170,8 +175,7 @@ main > article > .card {
   transition: all 0.2s ease-out;
 }
 
-
-.showMore{
+.showMore {
   opacity: 60%;
   font-size: 16px;
   border-radius: 15px;
@@ -182,7 +186,205 @@ main > article > .card {
   background-color: white;
 }
 
-
-.showMore:hover{
+.showMore:hover {
   opacity: 100%;
+}
+
+.cart-header {
+  font-weight: bold;
+  font-size: 1.25em;
+  color: #333;
+}
+
+.cart-column {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid black;
+  margin-right: 1.5em;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.cart-row {
+  display: flex;
+  width: 90%;
+  margin: auto;
+}
+
+.cart-item {
+  width: 45%;
+}
+
+.cart-price {
+  width: 20%;
+  font-size: 1.2em;
+  color: #333;
+}
+
+.cart-quantity {
+  width: 35%;
+}
+
+.cart-item-title {
+  color: #333;
+  margin-left: 0.5em;
+  font-size: 1.2em;
+}
+
+.cart-item-image {
+  width: 75px;
+  height: auto;
+  border-radius: 10px;
+}
+
+.btn-danger {
+  color: white;
+  background-color: #eb5757;
+  border: none;
+  border-radius: 0.3em;
+  font-weight: bold;
+}
+
+.btn-danger:hover {
+  background-color: #cc4c4c;
+}
+
+.cart-quantity-input {
+  height: 34px;
+  width: 50px;
+  border-radius: 5px;
+  border: 1px solid white;
+  background-color: #eee;
+  color: #333;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 25px;
+}
+
+.cart-row:last-child {
+  border-bottom: 1px solid black;
+}
+
+.cart-row:last-child .cart-column {
+  border: none;
+}
+
+.cart-total {
+  text-align: end;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.cart-total-title {
+  font-weight: bold;
+  font-size: 1.5em;
+  color: black;
+  margin-right: 20px;
+}
+
+.cart-total-price {
+  color: #333;
+  font-size: 1.1em;
+}
+
+.btn-purchase {
+  display: block;
+  margin: 40px auto 80px auto;
+  font-size: 1.75em;
+}
+
+.cartValue {
+  font-size: 16px;
+  align-self: top;
+}
+
+.products-container {
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+  max-width: 60%;
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.product-header {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  border-bottom: 4px solid white;
+  color: white;
+}
+
+.product-title {
+  width: 45%;
+}
+.price {
+  font-family: "Rubik", sans-serif;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  color: white;
+}
+.quantity {
+  width: 20%;
+  display: flex;
+  align-items: center;
+}
+.total {
+  justify-content: flex-end;
+  font-family: "Rubik", sans-serif;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  color: white;
+}
+.product {
+  width: 45%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0;
+}
+
+.products {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.products img {
+  width: 45%;
+}
+
+h5 {
+  font-family: "Rubik", sans-serif;
+  font-weight: 600;
+  color: white;
+  font-size: 16px;
+}
+
+icons-incart{
+  height: 100px;
+}
+.cartTotalContainer{
+  border-top: 1px solid white;
+  font-family: "Rubik", sans-serif;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 10px 0;
+  color: white;
+}
+
+.cartTotalTitle{
+  width: 30%;
+}
+
+
+.basketTotal{
+  width: 10%;
 }
